--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,14 +1,16 @@
-<h2>Change your password</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "form-signin") do |f| %>
+
+<h2 class="text-center">Change your password</h2>
+
   <%= f.error_notification %>
 
-  <%= f.input :reset_password_token, as: :hidden %>
+  <%= f.input :reset_password_token, as: :hidden, lable: false, placeholder: "Reset password", html_input: {class: "form-control"} %>
   <%= f.full_error :reset_password_token %>
 
   <div class="form-inputs">
-    <%= f.input :password, label: "New password", required: true, autofocus: true %>
-    <%= f.input :password_confirmation, label: "Confirm your new password", required: true %>
+    <%= f.input :password, label: "New password", required: true, autofocus: true, lable: false, placeholder: "Password", html_input: {class: "form-control"}  %>
+    <%= f.input :password_confirmation, label: "Confirm your new password", required: true lable: false, placeholder: "Confirm Password", html_input: {class: "form-control"}  %>
   </div>
 
   <div class="form-actions">
