--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
               <li>  <%= link_to "log-in", new_user_session_path %></li>
                <li> <%= link_to "Sign-up", new_user_registration_path %></li>
         <% end %>
-        <li>  <%= link_to "Book", "#" %> </li>
+        <li>  <%= link_to "Book", books_path %> </li>
 
         </li>
       </ul>
