--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,29 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @book.name %>
-</p>
+<div class= "row">
+  <div class= "col-md-6">
+  <%= image_tag "rails4.jpg", class: "img-responsive" %>
+  </div>
 
-<p>
-  <strong>Author:</strong>
-  <%= @book.author %>
-</p>
+  <div class= "col-md-6">
+  <h3> <%= @book.name %> by <%= @book.author %> </h3>
+  </div>
+  <p> <%= @book.description %> </p>
+  <h4 class="text-center"> <%= number_to_currency(@book.price, precision: 1) %> </h4>
 
-<p>
-  <strong>Description:</strong>
-  <%= @book.description %>
-</p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @book.price %>
-</p>
+</div>
 
-<p>
-  <strong>Availability:</strong>
-  <%= @book.availability %>
-</p>
+
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
