--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -22,9 +23,10 @@
         <li>
         <% if current_user %>
         <li> <%= link_to "Setting", edit_user_registration_path %> </li>
+        <li> <%= link_to "Dashboard", dashboard_path %> </li>
         <li> <%= link_to "Sign-out", destroy_user_session_path, method: :DELETE %> </li>
                 <% else %>
-              <li>  <%= link_to "log-in", new_user_session_path %></li>
+              <li>  <%= link_to "Log-in", new_user_session_path %></li>
                <li> <%= link_to "Sign-up", new_user_registration_path %></li>
         <% end %>
         <li>  <%= link_to "Book", books_path %> </li>
